<?xml version="1.0" encoding="UTF-8"?>
<project>
	<modelVersion>4.0.0</modelVersion>
	<packaging>jar</packaging>
	<name>analisaFII</name>
	<artifactId>analisaFII</artifactId>
	<groupId>com.boaglio</groupId>
	<version>1.0.0-SNAPSHOT</version>

	<description>analisa fundos imobiliarios</description>
	<url>https://github.com/boaglio/analisaFII</url>
	<scm>
		<url>https://github.com/boaglio/analisaFII</url>
	</scm>

	<contributors>
		<contributor>
			<name>Fernando Boaglio</name>
			<email>boaglio@gmail.com</email>
			<url>https://boaglio.com/</url>
			<timezone>America/Sao_Paulo</timezone>
		</contributor>
	</contributors>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<main.class>com.boaglio.analisaFII.AnalisaFundosImobiliarios</main.class>
		<java.version>17</java.version>
		<junit.jupiter.version>5.4.2</junit.jupiter.version>
		<maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
		<maven.jar.plugin.version>3.1.1</maven.jar.plugin.version>
		<maven.surefire.plugin.version>2.22.1</maven.surefire.plugin.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.13.1</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.plugin.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<mainClass>com.boaglio.analisaFII.AnalisaFundosImobiliarios</mainClass>
				</configuration>
			</plugin>

		</plugins>
	</build>
</project>
